# real_time_object_and_color_detection

./: .gitignore  README.md  pyproject.toml
doc/html/: ____init_____8py.html  annotated.html  annotated_dup.js  app__static__image_8py.html  app__static__image_8py.js  app__webcam_8py.html  app__webcam_8py.js  camera_8py.html  camera_8py.js  classapp__static__image_1_1_static_image_app-members.html  classapp__static__image_1_1_static_image_app.html  classapp__static__image_1_1_static_image_app.js  classapp__static__image_1_1_static_image_app__coll__graph.map  classapp__static__image_1_1_static_image_app__coll__graph.md5  classapp__webcam_1_1_webcam_app-members.html  classapp__webcam_1_1_webcam_app.html  classapp__webcam_1_1_webcam_app.js  classapp__webcam_1_1_webcam_app__coll__graph.map  classapp__webcam_1_1_webcam_app__coll__graph.md5  classcommon_1_1camera_1_1_camera-members.html  classcommon_1_1camera_1_1_camera.html  classcommon_1_1camera_1_1_camera.js  classcommon_1_1camera_1_1_camera__coll__graph.map  classcommon_1_1camera_1_1_camera__coll__graph.md5  classcommon_1_1image__reader_1_1_image_reader-members.html  classcommon_1_1image__reader_1_1_image_reader.html  classcommon_1_1image__reader_1_1_image_reader.js  classcommon_1_1image__reader_1_1_image_reader__coll__graph.map  classcommon_1_1image__reader_1_1_image_reader__coll__graph.md5  classcommon_1_1logger_1_1_logger-members.html  (+108 more)
documentation/: image_processor.md  software_architecture.md
log/: logfile_Sep-27-2023_19-04-20.csv
properties/: pattern_properties.json
src/: app_static_image.py  app_webcam.py
(+49 files in other folders)
